# universal-scanner

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  DOCUMENTATION_SUMMARY.md  MULTIPHASE_SCANNER_PLAN.md  NATIVE-PREPROCESSING-PLAN.md  ONNX-CPP-IMPLEMENTATION-GUIDE.md  ONNX-OUTPUT-FORMAT-DISCOVERY.md  PHASE_4_5_IMPLEMENTATION_PLAN.md  README.md  TODO.md  detection_pipeline.md  detection_pipeline_fix.md  detection_to_ocr_pipeline_fix.md  multistage_scanner.md  ocr.md  performance.md  project_plan.md  pull_debug_images.sh  react-native.config.js
android/: CMakeLists.txt  build.gradle
android/src/main/cpp/: JniOnLoad.cpp  Onnx.cpp  Tflite.cpp  Universal.cpp
android/src/main/java/com/onnx/: OnnxModule.java  OnnxPackage.java
android/src/main/java/com/tflite/: OnnxModule.java  TflitePackage.java
android/src/main/java/com/universal/: UniversalNativeModule.java  UniversalScannerFrameProcessorPlugin.java  YuvConverter.kt  YuvResizer.kt
cpp/: CodeDetectionConstants.cpp  CodeDetectionConstants.h  DebugConfig.h  OnnxHelpers.cpp  OnnxHelpers.h  OnnxPlugin.cpp  OnnxPlugin.h  OnnxProcessor.cpp  OnnxProcessor.h  OnnxProcessorV2.cpp  OnnxProcessorV2.h  Universal.cpp  UniversalScannerPlugin.cpp  UniversalScannerPlugin.h
cpp/ocr/: ContainerOCRProcessor.cpp  ContainerOCRProcessor.h  YoloOCREngine.cpp  YoloOCREngine.h
cpp/platform/: AndroidYuvConverter.cpp  AndroidYuvConverter.h  AndroidYuvResizer.cpp  IOSYuvConverter.cpp  IOSYuvConverter.h  IOSYuvResizer.cpp  OnnxDelegateManager.h  YuvConverter.cpp  YuvConverter.h  YuvResizer.h
cpp/preprocessing/: AdaptiveLetterbox.cpp  AdaptiveLetterbox.h  CropExtractor.cpp  CropExtractor.h  FrameConverter.cpp  FrameConverter.h  ImageDebugger.cpp  ImageDebugger.h  ImageRotation.cpp  ImageRotation.h  WhitePadding.cpp  WhitePadding.h
cpp/utils/: BoundingBox.h  ImageData.h  PerformanceTimer.h  ScanResult.h
data/: queries.txt
data/detection/: TODO
detection/: README.md  detection_training.md
detection/legacy-notes/: GENERATE_PRELABBELLED_DATASET.md  RN-Vision-Camera.md  ReactNative.md  data.yaml  training_yolo_ocr_multiclass.py
detection/models/: unified-detection-v7.yaml
detection/notebooks/: TRAINING_yolo_detection_multiclass_latest.ipynb  visualize_roboflow_results.ipynb
detection/scripts/: download_barcodes.py  download_containers.py  download_license_plates.py  export_mobile_optimized.py  export_sizes_colab.py  export_sizes_simple.py
example/: README.md  WORKLET_FIX_SOLUTION.md  app.json  babel.config.js  index.js  metro.config.js  package-lock.json  package.json
example/android/: gradle.properties  settings.gradle
example/ios/: .xcode.env.local  Podfile
example/patches/: react-native-vision-camera+4.0.3.patch
example/src/: App.tsx  CodeDetectionTypes.ts  ContainerValidation.ts  EnhancedSwitchableApp.tsx  ModelComparisonApp.tsx  NativePreprocessingApp.tsx  OnnxApp.tsx  SimplifiedBoundingBoxes.tsx  SwitchableApp.tsx  testImageData.ts  testImageDecoder.ts
ios/: Onnx.h  Onnx.mm
legacy-code/: ImagePaddingModule.kt
scripts/: download-onnxruntime.sh
src/: NativeRNOnnx.ts  OnnxModule.ts  OnnxRuntime.ts  TensorflowModule.ts  UniversalScanner.ts  index.ts
(+69 files in other folders)
